<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.1</version>
        <relativePath/>
    </parent>

    <groupId>com.benromdhane.omar.offroadsoft.turtlesandrabbits</groupId>
    <artifactId>spends</artifactId>
    <version>0.0.1</version>
    <name>spends</name>
    <description>service to manage spends for Off Road Soft Turtles And Rabbits</description>
    <inceptionYear>2026</inceptionYear>

    <url/>

    <licenses>
        <license>
            <name>GNU Affero General Public License, Version 3.0</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.html#license-text</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>Omar</id>
            <name>Omar BEN ROMDHANE</name>
            <email>benromdhaneomar@gmail.com</email>
            <organization>Off Road Soft</organization>
            <url>https://www.linkedin.com/in/benromdhaneomar/</url>
            <roles>
                <role>Software Architect</role>
                <role>Technical Expert</role>
                <role>Java/Kotlin developer</role>
            </roles>
            <timezone>GMT+1/GMT+7</timezone>
        </developer>
    </developers>

    <scm>
        <url/>
    </scm>

    <properties>
        <!--JAVA-->
        <java.version>25</java.version>
        <!--KOTLIN-->
        <kotlin.version>2.3.0</kotlin.version>
        <kotlinx.date-time.version>0.7.1-0.6.x-compat</kotlinx.date-time.version>
        <kotlin.serialization.version>1.10.0</kotlin.serialization.version>
        <!--HELPER-->
        <kotlin-monad-library.version>0.0.19</kotlin-monad-library.version>
        <!--DOCUMENTATION-->
        <openapi.version>3.0.1</openapi.version>
    </properties>

    <dependencies>

        <!--KOTLIN-->

        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlinx</groupId>
            <artifactId>kotlinx-datetime-jvm</artifactId>
            <version>${kotlinx.date-time.version}</version>
        </dependency>

        <!--SPRING-->


        <!--WEB-->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>

        <!--SERIALIZATION-->

        <dependency>
            <groupId>tools.jackson.module</groupId>
            <artifactId>jackson-module-kotlin</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-kotlin</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlinx</groupId>
            <artifactId>kotlinx-serialization-json</artifactId>
            <version>${kotlin.serialization.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>

        <!--HELPER-->

        <dependency>
            <groupId>io.github.benromdhaneomar</groupId>
            <artifactId>kotlin-monads-multiplatform-library-jvm</artifactId>
            <version>${kotlin-monad-library.version}</version>
        </dependency>

        <!--DOCUMENTATION-->

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${openapi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
            <version>${openapi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-scalar</artifactId>
            <version>${openapi.version}</version>
        </dependency>

        <!--MONITORING-->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!--TEST-->

        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit5</artifactId>
            <scope>test</scope>
        </dependency>

        <!--TEST-WEB-->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!--TEST-MONITORING-->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
        <plugins>

            <!--SPRING-->

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <!--KOTLIN-->

            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <configuration>
                    <args>
                        <arg>-Xjsr305=strict</arg>
                        <arg>-Xannotation-default-target=param-property</arg>
                    </args>
                    <compilerPlugins>
                        <plugin>spring</plugin>
                        <plugin>kotlinx-serialization</plugin>
                    </compilerPlugins>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-serialization</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <!--PACKAGING-->


            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <extensions>true</extensions>
                <configuration>
                    <buildArgs>
                        <buildArg>--enable-preview</buildArg>
                        <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
                        <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                        <buildArg>-H:IncludeResourceBundles=org.springframework.web.servlet.LocaleResolver</buildArg>
                        <buildArg>-H:IncludeResourceBundles=org.springframework.web.servlet.i18n.SessionLocaleResolver</buildArg>
                        <buildArg>-H:IncludeResourceBundles=org.springframework.context.support.ResourceBundleMessageSource</buildArg>
                        <buildArg>-H:IncludeResourceBundles=messages</buildArg>
                        <buildArg>-H:IncludeResourceBundles=ValidationMessages</buildArg>
                        <buildArg>-H:IncludeResources=.*\.properties$</buildArg>
                        <buildArg>-H:IncludeResources=.*\.yml$</buildArg>
                        <buildArg>-H:IncludeResources=.*\.yaml$</buildArg>
                        <buildArg>-H:IncludeResources=META-INF/spring\.factories</buildArg>
                        <buildArg>-H:IncludeResources=META-INF/spring/.*</buildArg>
<!--                        <buildArg>-H:ReflectionConfigurationResources=${project.basedir}/reflect-config.json</buildArg>-->
                        <buildArg>-O3</buildArg>
                    </buildArgs>
                    <metadataRepository>
                        <enabled>true</enabled>
                    </metadataRepository>
                </configuration>
            </plugin>

        </plugins>

    </build>

    <profiles>

        <profile>
            <id>native</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-maven-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>process-aot</id>
                                    <configuration>
                                        <profiles/>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>

    </profiles>

</project>
